# Voice-clone

./: .env.example  .gitignore  BEFORE_AFTER.md  FIXING_GIBBERISH.md  INTEGRATION_COMPLETE.md  README.md  SAMPLE_RATE_FIX_GUIDE.md  SAMPLE_RATE_INTEGRATION.md  VOICE_QUALITY_GUIDE.md  complete_pipeline.py  complete_voice_pipeline.py  complete_voice_pipeline_new.py  demo_updated_pipeline.py  diagnose_gibberish.py  direct_separation_test.py  example_usage.py  fix_sample_rate.py  pipeline.py  pyproject.toml  test_left_speaker_only.py  test_sample_rate_fix.py  test_voice_quality.py  voice_ai_separator.py  voice_pipeline.py
F5_TTS/: __init__.py  example.py  finetuning_guide.py  simple_test.py  voice_cloner.py  working_voice_test.py
old/: README.md  finetune.py  model.py  prepare_training.py  requirements.txt  simple_voice_test.py  success_summary.py  test_voice_cloning.py  voice_ai_separator.py  voice_separator_core_backup.py  voice_separator_wrapper_backup.py
scripts/: run_step8.py
test_separation_output/: quality_report.json
voice_ai/: README.md  __init__.py  audio_processor.py  processor.py  voice_separator.py  voice_synthesizer.py  voice_trainer.py
voice_ai_seperator/: voice_ai_separator.py
voice_clone_project_20250925_180343/: PROJECT_REPORT.json
voice_clone_project_20250928_125532/: PROJECT_REPORT.json
voice_clone_project_20250928_131222/: PROJECT_REPORT.json
voice_clone_project_20250928_131851/: PROJECT_REPORT.json
voice_clone_project_20251005_203311/: PROJECT_REPORT.json
voice_clone_project_20251007_133102/: PROJECT_REPORT.json
(+10 files in other folders)
